# rust-thread-local-drop

./: Cargo.toml  README.md  gen-doc.sh  joined_README.md
examples/: anomalous-outputs.txt  forced_map_accumulator_bad_explicit.rs  forced_map_accumulator_bad_implicit.rs  forced_map_accumulator_segfault_async.rs  forced_map_accumulator_segfault_async2.rs  forced_map_accumulator_segfault_sync.rs  forced_map_accumulator_segfault_sync2.rs  i32_accumulator.rs  joined_i32_accumulator.rs  joined_map_accumulator.rs  map_accumulator.rs  map_accumulator_async.rs  map_accumulator_bad.rs  map_accumulator_bad_explicit.rs  map_accumulator_bad_implicit.rs  map_accumulator_segfault_async2.rs  map_accumulator_segfault_sync.rs  map_accumulator_segfault_sync2.rs  thread_local_drop_standalone.rs
src/: common.rs  forced.rs  lib.rs  thread_local_drop.rs
