[package]
name = "thread-local-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
